@@ -2,6 +2,8 @@ Revision history for Perl extension AMI.
 
 0.1.7
 
+	- Removed Asterisk::AMI::completed(). Seemed pointless with callbacks.
+
 	- Added TCP_Keepalive option, enables socket level TCP keepalive for detecting dead connections.
 
 	- Fixed possible undefined value for timeout when sending a keepalive.
